--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-  <display-name>jdbcstudy</display-name>
+  <display-name>mpjt</display-name>
   <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+    <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
-  
-  <!-- servlet  -->
+  <!-- 
   <servlet>
-  	<servlet-name>Hello</servlet-name>
-  	<servlet-class>hello.Hello</servlet-class>
+  	<servlet-name>userController</servlet-name>
+  	<servlet-class>mpjt.controller.UserController</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>Hello</servlet-name>
-  	<url-pattern>/hello</url-pattern>
+  	<servlet-name>userController</servlet-name>
+  	<url-pattern>*.do</url-pattern>
   </servlet-mapping>
-  <servlet>
-  	<servlet-name>Hi</servlet-name>
-  	<servlet-class>hello.Hi</servlet-class>
-  </servlet>
   <servlet-mapping>
-  	<servlet-name>Hi</servlet-name>
-  	<url-pattern>/hi</url-pattern>
+  	<servlet-name>CommentController</servlet-name>
+  	<url-pattern>*.co</url-pattern>
   </servlet-mapping>
+   -->
 </web-app>
-
 
 
 
