--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>mvcpjt</groupId>
-  <artifactId>mvcpjt</artifactId>
+  <groupId>mpjt</groupId>
+  <artifactId>mpjt</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   
@@ -35,12 +35,6 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	    <artifactId>cos</artifactId>
 	    <version>05Nov2002</version>
 	</dependency>
-	
-	<dependency>
-        <groupId>org.jsoup</groupId>
-        <artifactId>jsoup</artifactId>
-        <version>1.16.1</version>
-    </dependency>
 
 	<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
 	<dependency>
